--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:text="Load First Fragment"
         android:layout_margin="20dp"/>
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/fragmentContainer"
         android:layout_width="match_parent"
         android:orientation="vertical"
